cabal-version:      3.0
name:               gbnet-hs-demo
version:            0.1.0.0
synopsis:           Visual P2P demo for the gbnet-hs networking library
description:
  A Gloss-rendered multiplayer demo showcasing gbnet-hs peer networking.
  Run multiple instances on different ports to see automatic connection,
  mesh peer introduction, and real-time position broadcast.

license:            MIT
license-file:       LICENSE
author:             Devon Tomlin
maintainer:         devon@novavero.ai
homepage:           https://github.com/Gondola-Bros-Entertainment/gbnet-hs-demo
bug-reports:        https://github.com/Gondola-Bros-Entertainment/gbnet-hs-demo/issues
category:           Network, Game, Demo
stability:          experimental
build-type:         Simple
tested-with:        GHC == 9.6.7
extra-doc-files:    README.md

executable gbnet-demo
  main-is:          Main.hs
  other-modules:    Game
  hs-source-dirs:   src
  build-depends:
      base          >= 4.16 && < 5
    , gbnet-hs       >= 0.2 && < 0.3
    , bytestring    >= 0.11 && < 0.13
    , gloss         >= 1.13 && < 1.15
    , containers    >= 0.6  && < 0.8
    , network       >= 3.1  && < 3.3
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -threaded

source-repository head
  type:     git
  location: https://github.com/Gondola-Bros-Entertainment/gbnet-hs-demo
  branch:   main
